# ical-rs

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  publish-doc.sh
.github/workflows/: CICD.yml
docs/: index.html  search-index.js
docs/backtrace/: fn.resolve.html  fn.trace.html  index.html  struct.Backtrace.html  struct.BacktraceFrame.html  struct.BacktraceSymbol.html  struct.Frame.html  struct.Symbol.html  struct.SymbolName.html
docs/backtrace_sys/: enum.backtrace_state.html  fn.backtrace_create_state.html  fn.backtrace_pcinfo.html  fn.backtrace_syminfo.html  index.html  type.backtrace_error_callback.html  type.backtrace_full_callback.html  type.backtrace_syminfo_callback.html
docs/cfg_if/: index.html  macro.cfg_if.html
docs/dbghelp/: index.html
docs/error_chain/: index.html  macro.bail.html  macro.ensure.html  macro.error_chain.html  macro.error_chain_processed.html  macro.quick_error.html  macro.quick_main.html  struct.Backtrace.html  struct.Display.html  struct.ErrorChainIter.html  trait.ChainedError.html  trait.ExitCode.html
docs/ical/: LineParser.t.html  PARAM_DELIMITER.v.html  PARAM_NAME_DELIMITER.v.html  PARAM_VALUE_DELIMITER.v.html  VALUE_DELIMITER.v.html  constant.PARAM_DELIMITER.html  constant.PARAM_NAME_DELIMITER.html  constant.PARAM_VALUE_DELIMITER.html  constant.VALUE_DELIMITER.html  index.html  sidebar-items.js  struct.IcalParser.html  struct.LineParser.html  struct.LineReader.html
docs/rustc_demangle/: fn.demangle.html  fn.try_demangle.html  index.html  struct.Demangle.html  struct.TryDemangleError.html
example-vcards/: small_multi_lines.vcf
examples/: icalLineReader.rs  ical_generator.rs  ical_parser.rs  line_reader.rs  property_parser.rs  vcard_parser.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: ical.rs
src/: design.rs  lib.rs  line.rs  param.rs  parser.rs  property.rs  reader.rs  value.rs
src/generator/: calendar_builder.rs  event_builder.rs  ical.rs  mod.rs  vcard_builder.rs
src/ical/: alarm.rs  component.rs  event.rs  mod.rs  param.rs  property.rs
src/line/: mod.rs  parser.rs  reader.rs
src/parser/: mod.rs
src/value/: mod.rs  parser.rs
tests/: line.rs  line.rs.bk  main.rs  main.rs.bk  mod.rs  vcard.rs
tests/parser/: vcard.vcf  vcard1.json  vcard1.vcf  vcard3.json  vcard3.vcf  vcard4.vcf  vcard_error.json  vcard_error.vcf
tests/ressources/: ical_example_1.ics  ical_example_1.res  ical_example_2.ics  ical_input.ics  ical_line_parser.res  ical_line_reader.res  ical_parser.res  ical_property.res  multiple_root_components.ics  o365_meeting.ics  property_error.res  property_error.vcf  sabre_test.ics  vcard_input.vcf  vcard_line_parser.res  vcard_line_reader.res  vcard_lowercase.res  vcard_parser.res  (+2 more)
(+153 files in other folders)
